--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.0",
     "core-js": "^3.6.5",
     "curl": "^0.1.4",
     "faunadb": "^4.0.0",
